force-app/main/default/objects/WorkOrder/fields/AF_Cause__c.field-meta.xml
<CustomField>
    <fullName>AF_Cause__c</fullName>
    <description>Root cause extracted by Agentforce Prompt Builder (CCC_Extractor template) from the technician transcript.</description>
    <label>Agentforce — Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>