force-app/main/default/objects/WorkOrder/fields/AF_Complaint__c.field-meta.xml
<CustomField>
    <fullName>AF_Complaint__c</fullName>
    <description>Complaint extracted by Agentforce Prompt Builder (CCC_Extractor template) from the technician transcript.</description>
    <label>Agentforce — Complaint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>