force-app/main/default/objects/WorkOrder/fields/AF_Correction__c.field-meta.xml
<CustomField>
    <fullName>AF_Correction__c</fullName>
    <description>Correction extracted by Agentforce Prompt Builder (CCC_Extractor template) from the technician transcript.</description>
    <label>Agentforce — Correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>