force-app/main/default/objects/WorkOrder/fields/CCC_Cause__c.field-meta.xml
<CustomField>
    <fullName>CCC_Cause__c</fullName>
    <description>LLM-extracted cause: the root cause identified by the technician.</description>
    <label>CCC — Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>