force-app/main/default/objects/WorkOrder/fields/CCC_Complaint__c.field-meta.xml
<CustomField>
    <fullName>CCC_Complaint__c</fullName>
    <description>LLM-extracted complaint: what the technician or customer observed (the symptom).</description>
    <label>CCC — Complaint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>