force-app/main/default/objects/WorkOrder/fields/CCC_Correction__c.field-meta.xml
<CustomField>
    <fullName>CCC_Correction__c</fullName>
    <description>LLM-extracted correction: the action taken to resolve the issue.</description>
    <label>CCC — Correction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>