force-app/main/default/objects/WorkOrder/fields/CCC_Prompt_Log__c.field-meta.xml
<CustomField>
    <fullName>CCC_Prompt_Log__c</fullName>
    <description>Full prompt sent to the LLM: system instructions followed by the technician input. Written on every successful callout for auditability.</description>
    <label>CCC — Prompt Sent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>