force-app/main/default/objects/WorkOrder/fields/CCC_Raw_Input__c.field-meta.xml
<CustomField>
    <fullName>CCC_Raw_Input__c</fullName>
    <description>Unmodified technician narrative exactly as entered. Always persisted before LLM processing.</description>
    <label>CCC — Raw Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>