force-app/main/default/objects/WorkOrder/fields/CCC_Raw_Transcript__c.field-meta.xml
<CustomField>
    <fullName>CCC_Raw_Transcript__c</fullName>
    <description>Whisper transcription of the technician voice recording. Shared across both LLM paths — written before any extraction runs.</description>
    <label>CCC — Raw Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>