force-app/main/default/objects/WorkOrder/fields/CCC_Response_Log__c.field-meta.xml
<CustomField>
    <fullName>CCC_Response_Log__c</fullName>
    <description>Raw JSON response body received from the LLM. Includes the full OpenAI response envelope: model, usage tokens, and the extracted content.</description>
    <label>CCC — Response Received</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>