force-app/main/default/objects/WorkOrder/fields/CCC_Transcript__c.field-meta.xml
<CustomField>
    <fullName>CCC_Transcript__c</fullName>
    <description>Raw transcript text returned by OpenAI Whisper STT. Stored before GPT-4o extraction so the technician can review and for audit purposes.</description>
    <label>CCC — Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>